<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dip"
    android:paddingRight="16dip"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="124dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="77dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/copyright"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="sans-serif-medium"
        android:text="Developer Details:"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/groupclass"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="77dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/group"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/groupclass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/afifah"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/athirah"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/info"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="43dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/webisteurl"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/Abouthyperlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="58dp"
        android:text="@string/hyperlink"
        android:textAlignment="center"
        android:textColor="#100D0D"
        android:textSize="12sp" />

</RelativeLayout>